skadmin, start script template: updated (for windows, multi-lines)